# Pogl

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Camera.cpp  Camera.h  InputState.h  Mesh.cpp  Mesh.h  Pogl.cpp  Pogl.h  PoglWindow.h  README.md  Shader.cpp  Shader.h
Shaders/: shader.frag  shader.vert
data/shaders/: shader.frag  shader.vert  specular_diffuse.frag  specular_diffuse.vert  vertex_col.frag  vertex_col.vert
include/: Camera.h  Light.h  LightData.h  Mesh.h  Model.h  Pogl.h  PoglWindow.h  Render.h  Shader.h  Shaders.h  Shapes.h  Texture.h  Transform.h  Utils.h  Vertex_Col.h  stb_image.h
src/: CMakeLists.txt  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Pogl.cpp  PoglWindow.cpp  Render.cpp  Shader.cpp  Shaders.cpp  Shapes.cpp  Texture.cpp  Utils.cpp
